--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav class="fixed-top">
-        <img src="./public/img/logo-removebg-preview.png" alt="" />
+        <h2>delicipus</h2>
         <div class="links-button">
           <div class="links">
             <a class="a1" href="">Home</a>
@@ -149,7 +149,7 @@
           />
         </video>
 
-        <div>
+        <div class="left-side">
           <h2>
             Eum ipsam laborum deleniti velit pariatur architecto aut nihil
           </h2>
@@ -188,15 +188,18 @@
         </div>
       </div>
       <div class="about-section2">
-        <div class="d-flex align-items-center flex-column justify-content-center title-section2 ">
-          <h2>Why choose <span>Our Restaurant</span> </h2>
+        <div
+          class="d-flex align-items-center flex-column justify-content-center title-section2"
+        >
+          <h2>Why choose <span>Our Restaurant</span></h2>
           <p class="text-center">
-            Ut possimus qui ut temporibus culpa velit eveniet modi omnis est <br>
+            Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
+            <br />
             adipisci expedita at voluptas atque vitae autem.
           </p>
         </div>
         <div class="inside-section2">
-          <div class="  hover">
+          <div class="hover">
             <h3>01</h3>
             <h2>Lorem Ipsum</h2>
             <p>
@@ -204,7 +207,7 @@
               consectetur ducimus vero placeat
             </p>
           </div>
-          <div class="  hover">
+          <div class="hover">
             <h3>02</h3>
             <h2>Lorem Ipsum</h2>
             <p>
@@ -212,7 +215,7 @@
               consectetur ducimus vero placeat
             </p>
           </div>
-          <div class="  hover">
+          <div class="hover">
             <h3>03</h3>
             <h2>Lorem Ipsum</h2>
             <p>
