--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="fixed-top">
         <h2>delicipus</h2>
         <div class="links-button">
@@ -67,7 +67,7 @@
                 Minus et <br />
                 tempore modi architecto.
               </p>
-              <div>
+              <div class="buttons">
                 <button class="btn2">Open menu</button>
                 <button class="btn3">Book a table</button>
               </div>
@@ -90,7 +90,7 @@
                 Minus et <br />
                 tempore modi architecto
               </p>
-              <div>
+              <div class="buttons">
                 <button class="btn2">Open menu</button>
                 <button class="btn3">Book a table</button>
               </div>
@@ -113,7 +113,7 @@
                 Minus et <br />
                 tempore modi architecto
               </p>
-              <div>
+              <div class="buttons">
                 <button class="btn2">Open menu</button>
                 <button class="btn3">Book a table</button>
               </div>
@@ -143,11 +143,18 @@
 
     <div id="about">
       <div class="about-section1">
-        <video width="600" controls poster="./public/img/about.jpg">
-          <source
-            src="./public/videos/Nature Beautiful short video 720p HD (1).mp4"
-          />
-        </video>
+        <div class="video">
+          <video
+            width="550"
+            height="400"
+            controls
+            poster="./public/img/about.jpg"
+          >
+            <source
+              src="./public/videos/Nature Beautiful short video 720p HD (1).mp4"
+            />
+          </video>
+        </div>
 
         <div class="left-side">
           <h2>
@@ -216,6 +223,7 @@
             </p>
           </div>
           <div class="hover">
+            <div></div>
             <h3>03</h3>
             <h2>Lorem Ipsum</h2>
             <p>
@@ -226,6 +234,171 @@
         </div>
       </div>
     </div>
+
+    <div id="events">
+      <div class="event-section">
+        <h2 >Organize Your <span>Events</span> in our Restaurant</h2>
+        <div>
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="d-flex justify-content-evenly">
+                  <img
+                    src="./public/img/event-custom.jpg"
+                    width="500"
+                    height="335"
+                    class=""
+                    alt="..."
+                  />
+                  <div class="left-side">
+                    <h3>Birthday party</h3>
+                    <h4>$290</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do <br />
+                      eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </p>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <p>
+                      Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Duis aute <br />
+                      irure dolor in reprehenderit in voluptate velit esse
+                      cillum dolore eu fugiat <br />
+                      nulla pariatur. Excepteur sint occaecat cupidatat non
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-evenly">
+                  <img
+                    src="./public/img/event-private.jpg"
+                    width="500"
+                    height="335"
+                    class=""
+                    alt="..."
+                  />
+                  <div class="left-side">
+                    <h3>Birthday party</h3>
+                    <h4>$290</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do <br />
+                      eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </p>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <p>
+                      Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Duis aute <br />
+                      irure dolor in reprehenderit in voluptate velit esse
+                      cillum dolore eu fugiat <br />
+                      nulla pariatur. Excepteur sint occaecat cupidatat non
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-flex justify-content-evenly">
+                  <img
+                    src="./public/img/event-custom.jpg"
+                    width="500"
+                    height="335"
+                    class=""
+                    alt="..."
+                  />
+                  <div class="left-side">
+                    <h3>Birthday party</h3>
+                    <h4>$290</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do <br />
+                      eiusmod tempor incididunt ut labore et dolore magna aliqua
+                    </p>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <div class="icon-para">
+                      <i class="bi bi-check-circle"></i>
+                      <p>
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                    <p>
+                      Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Duis aute <br />
+                      irure dolor in reprehenderit in voluptate velit esse
+                      cillum dolore eu fugiat <br />
+                      nulla pariatur. Excepteur sint occaecat cupidatat non
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button> -->
+          </div>
+      </div>
+    </div>
+
+
+
+   
+    
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
+
