--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
 
     <div id="events">
-      <div class="event-section">
+      <div class="event-section-top">
         <h2 >Organize Your <span>Events</span> in our Restaurant</h2>
         <div>
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -393,6 +393,34 @@
           </div>
       </div>
     </div>
+
+    <div class="form-section">
+      <h1> Book a <span> Table</span></h1>
+      <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est <br> adipisci expedita at voluptas atque vitae autem.</p>
+
+      <div class="form">
+          <form action="">
+              <div class="first-inputs">
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="Your email">
+                <input type="text" placeholder="Your phone">
+              </div>
+              <div class="first-inputs">
+                <input type="datetime" placeholder="Your date">
+                <input type="datetime" placeholder="Your time">
+                <input type="number" placeholder="# of peaple">
+              </div>
+              <textarea name="" id="" placeholder="Message"></textarea>
+              <button class="btn4">Send Message</button>
+          </form>
+      </div>
+    </div>
+
+
+   
+
+
+   
 
 
 
