--- a/index.html
+++ b/index.html
@@ -207,12 +207,14 @@
         </div>
         <div class="inside-section2">
           <div class="hover">
-            <h3>01</h3>
-            <h2>Lorem Ipsum</h2>
-            <p>
-              Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et
-              consectetur ducimus vero placeat
-            </p>
+            <div class="hoverr">
+                <h3>01</h3>
+                <h2>Lorem Ipsum</h2>
+                <p>
+                  Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et
+                  consectetur ducimus vero placeat
+                </p>
+            </div>
           </div>
           <div class="hover">
             <h3>02</h3>
@@ -223,7 +225,6 @@
             </p>
           </div>
           <div class="hover">
-            <div></div>
             <h3>03</h3>
             <h2>Lorem Ipsum</h2>
             <p>
@@ -416,7 +417,25 @@
       </div>
     </div>
 
+    <div id="gallery">
+      <h1> Some photos from  <span> Our Restaurant</span></h1>
+      <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est <br> adipisci expedita at voluptas atque vitae autem.</p>
 
+      <div class="gallerys">
+        <div  class="gallery-top">
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-1.jpg" alt=""></div>
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-2.jpg" alt=""></div>
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-3.jpg" alt=""></div>
+          <div class="gallery-img"> <img src="./public/img/gallery/gallery-4.jpg" alt=""></div>
+        </div>
+        <div class="gallery-top">
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-5.jpg" alt=""></div>
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-6.jpg" alt=""></div>
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-7.jpg" alt=""></div>
+          <div class="gallery-img"><img src="./public/img/gallery/gallery-8.jpg" alt=""></div>
+        </div>
+      </div>
+    </div>
    
 
 
