adding footer section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     
       <nav class="fixed-top">
-        <h2>delicipus</h2>
+        <h2>Delicipus</h2>
         <div class="links-button">
           <div class="links">
             <a class="a1" href="">Home</a>
@@ -557,7 +557,19 @@
 
 
 
-  
+  <footer>
+    <h2>Delicipus</h2>
+    <P>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</P>
+    <div class="footer-icons">
+      <i class="bi bi-twitter"></i>
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-skype"></i>
+      <i class="bi bi-linkedin"></i>
+    </div>
+    <p>© Copyright <strong>Delicious</strong> . All Rights Reserved <br> Designed by <span>BootstrapMade</span></p>
+    
+  </footer>
 
     <!-- <div class="chef-information">
         <img class="jhon" src="./public/img/testimonials/testimonials-1.jpg" alt="">
