--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <a class="a1" href="#about">About</a>
             <a class="a1" href="">Menu</a>
             <a class="a1" href="">Specials</a>
-            <a class="a1" href="">Events</a>
+            <a class="a1" href="#events">Events</a>
             <a class="a1" href="">Chefs</a>
-            <a class="a1" href="">Gallery</a>
+            <a class="a1" href="#gallery">Gallery</a>
             <a class="a1" href="">Drop Down</a>
-            <a class="a1" href="">Contact</a>
+            <a class="a1" href="#contact-us">Contact</a>
           </div>
           <button class="btn1">Book a table</button>
         </div>
@@ -60,11 +60,11 @@
               <h1><span>Delicious</span> Restaurant</h1>
               <p>
                 Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et
-                est quaerat <br />
+                est quaerat 
                 sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut.
-                Similique ea <br />
+                Similique ea 
                 voluptatem. Esse doloremque accusamus repellendus deleniti vel.
-                Minus et <br />
+                Minus et 
                 tempore modi architecto.
               </p>
               <div class="buttons">
@@ -76,7 +76,7 @@
           <div class="carousel-item">
             <img
               src="./public/img/slide/slide-2.jpg"
-              class="d-block w-100 opacity-75"
+              class="d-block w-100 "
               alt="..."
             />
             <div class="first-section card-img-overlay text-white">
@@ -99,7 +99,7 @@
           <div class="carousel-item">
             <img
               src="./public/img/slide/slide-3.jpg"
-              class="d-block w-100 opacity-75"
+              class="d-block w-100 "
               alt="..."
             />
             <div class="first-section card-img-overlay text-white">
@@ -158,7 +158,7 @@
 
         <div class="left-side">
           <h2>
-            Eum ipsam laborum deleniti velit pariatur architecto aut nihil
+            Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong> 
           </h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -195,13 +195,10 @@
         </div>
       </div>
       <div class="about-section2">
-        <div
-          class="d-flex align-items-center flex-column justify-content-center title-section2"
-        >
+        <div class="d-flex align-items-center flex-column justify-content-center title-section2">
           <h2>Why choose <span>Our Restaurant</span></h2>
           <p class="text-center">
             Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
-            <br />
             adipisci expedita at voluptas atque vitae autem.
           </p>
         </div>
@@ -218,7 +215,7 @@
           </div>
           <div class="hover">
             <h3>02</h3>
-            <h2>Lorem Ipsum</h2>
+            <h2>Repellat Nihil</h2>
             <p>
               Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et
               consectetur ducimus vero placeat
@@ -226,7 +223,7 @@
           </div>
           <div class="hover">
             <h3>03</h3>
-            <h2>Lorem Ipsum</h2>
+            <h2>Ad ad velit qui</h2>
             <p>
               Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et
               consectetur ducimus vero placeat
@@ -239,7 +236,7 @@
     <div id="events">
       <div class="event-section-top">
         <h2 >Organize Your <span>Events</span> in our Restaurant</h2>
-        <div>
+        <div >
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -248,7 +245,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="d-flex justify-content-evenly">
+                <div class="d-flex justify-content-evenly ">
                   <img
                     src="./public/img/event-custom.jpg"
                     width="500"
