--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div id="about">
       <div class="about-section1">
         <div class="video">
-          <video
+          <!-- <video
             width="550"
             height="400"
             controls
@@ -153,7 +153,7 @@
             <source
               src="./public/videos/Nature Beautiful short video 720p HD (1).mp4"
             />
-          </video>
+          </video> -->
         </div>
 
         <div class="left-side">
@@ -236,7 +236,7 @@
     <div id="events">
       <div class="event-section-top">
         <h2 >Organize Your <span>Events</span> in our Restaurant</h2>
-        <div >
+        <div class=" " >
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -245,7 +245,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="d-flex justify-content-evenly ">
+                <div class=" Organization-section ">
                   <img
                     src="./public/img/event-custom.jpg"
                     width="500"
@@ -253,9 +253,9 @@
                     class=""
                     alt="..."
                   />
-                  <div class="left-side">
-                    <h3>Birthday party</h3>
-                    <h4>$290</h4>
+                  <div class="left-side ">
+                    <h3 class="fw-bold">Birthday party</h3>
+                    <h4 class="fw-bold ">$290</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                       sed do <br />
@@ -290,7 +290,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="d-flex justify-content-evenly">
+                <div class="Organization-section">
                   <img
                     src="./public/img/event-private.jpg"
                     width="500"
@@ -298,9 +298,9 @@
                     class=""
                     alt="..."
                   />
-                  <div class="left-side">
-                    <h3>Birthday party</h3>
-                    <h4>$290</h4>
+                  <div class="left-side ">
+                    <h3 class="fw-bold">Birthday party</h3>
+                    <h4 class="fw-bold ">$290</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                       sed do <br />
@@ -335,17 +335,17 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="d-flex justify-content-evenly">
+                <div class="Organization-section">
                   <img
-                    src="./public/img/event-custom.jpg"
+                    src="./public/img/event-birthday.jpg"
                     width="500"
                     height="335"
                     class=""
                     alt="..."
                   />
-                  <div class="left-side">
-                    <h3>Birthday party</h3>
-                    <h4>$290</h4>
+                  <div class="left-side ">
+                    <h3 class="fw-bold">Birthday party</h3>
+                    <h4 class="fw-bold ">$290</h4>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                       sed do <br />
@@ -394,7 +394,7 @@
 
     <div class="form-section">
       <h1> Book a <span> Table</span></h1>
-      <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est <br> adipisci expedita at voluptas atque vitae autem.</p>
+      <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
 
       <div class="form">
           <form action="">
@@ -416,7 +416,7 @@
 
     <div id="gallery">
       <h1> Some photos from  <span> Our Restaurant</span></h1>
-      <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est <br> adipisci expedita at voluptas atque vitae autem.</p>
+      <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est  adipisci expedita at voluptas atque vitae autem.</p>
 
       <div class="gallerys">
         <div  class="gallery-top">
@@ -444,7 +444,7 @@
             <h3>Jhone Larson </h3>
             <p>Entrepreneur</p>
             <img src="./public/img/stars-removebg-preview.png" alt="">
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt <br> sunt soluta quos temporibus vero deserunt sunt!</h5>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
         <div class="carousel-item">
@@ -453,7 +453,7 @@
             <h3>Sara willson </h3>
             <p>Entrepreneur</p>
             <img src="./public/img/stars-removebg-preview.png" alt="">
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt <br> sunt soluta quos temporibus vero deserunt sunt!</h5>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
         <div class="carousel-item">
@@ -462,7 +462,7 @@
             <h3>jhena carlis </h3>
             <p>Entrepreneur</p>
             <img src="./public/img/stars-removebg-preview.png" alt="">
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt <br> sunt soluta quos temporibus vero deserunt sunt!</h5>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
         <div class="carousel-item">
@@ -471,7 +471,7 @@
             <h3>jhena carlis </h3>
             <p>Entrepreneur</p>
             <img src="./public/img/stars-removebg-preview.png" alt="">
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt <br> sunt soluta quos temporibus vero deserunt sunt!</h5>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
            </div>
         </div>
         <div class="carousel-item">
@@ -480,7 +480,7 @@
             <h3>jhena carlis </h3>
             <p>Entrepreneur</p>
             <img src="./public/img/stars-removebg-preview.png" alt="">
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt <br> sunt soluta quos temporibus vero deserunt sunt!</h5>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
       </div>
@@ -492,7 +492,7 @@
   <div id="contact-us">
     <div class="contact-section">
         <h2><span>Contact</span> Us</h2>
-        <p class="para">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est <br> adipisci expedita at voluptas atque vitae autem</p>
+        <p class="para">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est  adipisci expedita at voluptas atque vitae autem</p>
         <div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d212753.6744017878!2d-7.75180601600065!3d33.57217828233385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cd4778aa113b%3A0xb06c1d84f310fd3!2sCasablanca!5e0!3m2!1sfr!2sma!4v1720091799167!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
 
