--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <nav class="fixed-top">
         <h2>Delicipus</h2>
         <div class="links-button">
+          <input type="checkbox" id="check">
           <div class="links">
             <a class="a1" href="">Home</a>
             <a class="a1" href="#about">About</a>
@@ -23,6 +24,12 @@
             <a class="a1" href="#contact-us">Contact</a>
           </div>
           <button class="btn1">Book a table</button>
+          <label for="check" class="menu">
+            <i class="bi bi-list"></i>
+          </label>
+          <label for="check" class="close">
+            <i class="bi bi-x-lg"></i>
+          </label>
         </div>
       </nav>
       <header class="header">
@@ -83,11 +90,11 @@
               <h1>Lorem Ipsum Dolor</h1>
               <p>
                 Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et
-                est quaerat <br />
+                est quaerat 
                 sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut.
-                Similique ea <br />
+                Similique ea 
                 voluptatem. Esse doloremque accusamus repellendus deleniti vel.
-                Minus et <br />
+                Minus et 
                 tempore modi architecto
               </p>
               <div class="buttons">
@@ -106,11 +113,11 @@
               <h1>Sequi ea ut et est quaerat</h1>
               <p>
                 Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et
-                est quaerat <br />
+                est quaerat 
                 sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut.
-                Similique ea <br />
+                Similique ea 
                 voluptatem. Esse doloremque accusamus repellendus deleniti vel.
-                Minus et <br />
+                Minus et 
                 tempore modi architecto
               </p>
               <div class="buttons">
@@ -144,16 +151,9 @@
     <div id="about">
       <div class="about-section1">
         <div class="video">
-          <!-- <video
-            width="550"
-            height="400"
-            controls
-            poster="./public/img/about.jpg"
-          >
-            <source
-              src="./public/videos/Nature Beautiful short video 720p HD (1).mp4"
-            />
-          </video> -->
+          <video width="600"  controls poster="./public/img/about.jpg">
+            <source src="./public/videos/Nature Beautiful short video 720p HD (1).mp4">
+          </video>
         </div>
 
         <div class="left-side">
@@ -443,7 +443,7 @@
             <img class="jhon" src="./public/img/testimonials/testimonials-1.jpg" alt="">
             <h3>Jhone Larson </h3>
             <p>Entrepreneur</p>
-            <img src="./public/img/stars-removebg-preview.png" alt="">
+            <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
@@ -452,7 +452,7 @@
             <img class="jhon" src="./public/img/testimonials/testimonials-2.jpg" alt="">
             <h3>Sara willson </h3>
             <p>Entrepreneur</p>
-            <img src="./public/img/stars-removebg-preview.png" alt="">
+            <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
@@ -461,7 +461,7 @@
             <img class="jhon" src="./public/img/testimonials/testimonials-3.jpg" alt="">
             <h3>jhena carlis </h3>
             <p>Entrepreneur</p>
-            <img src="./public/img/stars-removebg-preview.png" alt="">
+            <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
@@ -470,7 +470,7 @@
             <img class="jhon" src="./public/img/testimonials/testimonials-4.jpg" alt="">
             <h3>jhena carlis </h3>
             <p>Entrepreneur</p>
-            <img src="./public/img/stars-removebg-preview.png" alt="">
+            <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
            </div>
         </div>
@@ -479,7 +479,7 @@
             <img class="jhon" src="./public/img/testimonials/testimonials-5.jpg" alt="">
             <h3>jhena carlis </h3>
             <p>Entrepreneur</p>
-            <img src="./public/img/stars-removebg-preview.png" alt="">
+            <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
           </div>
         </div>
