--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         <div class="carousel-item">
           <div class="chef-information">
             <img class="jhon" src="./public/img/testimonials/testimonials-3.jpg" alt="">
-            <h3>jhena carlis </h3>
+            <h3>Jhena carlis </h3>
             <p>Star Owner</p>
             <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt sunt soluta quos temporibus vero deserunt sunt!</h5>
@@ -698,7 +698,7 @@
         <div class="carousel-item">
           <div class="chef-information">
             <img class="jhon" src="./public/img/testimonials/testimonials-4.jpg" alt="">
-            <h3>jhena carlis </h3>
+            <h3>Jhena carlis </h3>
             <p>Freelancer</p>
             <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
@@ -707,7 +707,7 @@
         <div class="carousel-item">
           <div class="chef-information">
             <img class="jhon" src="./public/img/testimonials/testimonials-5.jpg" alt="">
-            <h3>jhena carlis </h3>
+            <h3>Jhena carlis </h3>
             <p>Entrepreneur</p>
             <img src="./public/img/star-removebg-preview.png" alt="">
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt  sunt soluta quos temporibus vero deserunt sunt!</h5>
@@ -807,75 +807,7 @@
    
     
 
-  <!-- <div class="d-flex flex-column align-items-center justify-content-center align-items-start">
-    <div class="nav d-flex  nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
-      <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
-      <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</button>
-      <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</button>
-      <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</button>
-    </div>
-    <div class="tab-content" id="v-pills-tabContent">
-      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">aaa</div>
-      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">bbbb</div>
-      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">ccc</div>
-      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">ddd</div>
-    </div>
-  </div> -->
-
-   
-<!-- <div class="d-flex  justify-content-evenly">
-  <div class="d-flex flex-column gap-4">
-    <div class="d-flex gap-5">
-      <h5>Lobster Bisque <br><span class="fs-6">Lorem, deren, trataro, filede, nerada.</span></h5>
-      <h5>$5.95</h5>
-    </div>
-    <div class="d-flex gap-5">
-      <h5>Crob cake <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$7.95</h5>
-    </div>
-    <div class="d-flex gap-5">
-      <h5>Tuscan Grilled <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$9.95</h5>
-    </div>
-    <div class="d-flex gap-5"> 
-      <h5>Greek salad <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$9.95</h5>
-    </div>
-    <div class="d-flex gap-5">
-      <h5>Lobster roll <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$12.95</h5>
-    </div>
-  </div>
-  <div class="d-flex flex-column gap-4">
-    <div class="d-flex gap-5">
-      <h5>Bread barrel <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$6.95</h5>
-    </div>
-    <div class="d-flex gap-5">
-      <h5>Caesar selections <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$8.95</h5>
-    </div>
-    <div class="d-flex gap-5">
-      <h5>Mazzarella stick <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$4.95</h5>
-    </div>
-    <div class="d-flex gap-5">
-      <h5>Spinach salad <br><span class="fs-6">Lorem, deren, trataro, filede, nerada</span></h5>
-      <h5>$9.95</h5>
-    </div>
-  </div>
-</div> -->
-
-
-
-
-    <!-- <div class="chef-information">
-        <img class="jhon" src="./public/img/testimonials/testimonials-1.jpg" alt="">
-        <h3>Jhone Larson </h3>
-        <p>Entrepreneur</p>
-        <img src="./public/img/stars.PNG" alt="">
-        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta quos temporibus vero deserunt <br> sunt soluta quos temporibus vero deserunt sunt!</h5>
-    </div> -->
+ 
 
 
    
